modified:   camp-za.html 	modified:   css/camp-za.css 	modified:   css/qr-za.css 	modified:   css/yuc-za.css 	modified:   qr-za.html 	modified:   yuc-za.html

--- a/css/qr-za.css
+++ b/css/qr-za.css
@@ -5,3 +5,11 @@
 .bg-custom {
     background-color: #069680;
 }
+
+.card {
+    transition: transform 1s;
+}
+
+.card:hover {
+    transform: rotateY(180deg);
+}
