--- a/css/camp-za.css
+++ b/css/camp-za.css
@@ -1,7 +1,30 @@
-.card-img-top{
-    height: 500px;
-}
-
 .bg-custom {
     background-color: #069680;
+}
+
+.card {
+    transition: transform 1s;
+}
+
+.card:hover {
+    transform: rotateY(180deg);
+}
+
+.card:hover .card-back .back-image {
+    display: block;
+}
+
+.card-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.card-back .back-image {
+    display: none;
+    max-width: 100%;
+    max-height: 100%;
+    transform: rotateY(180deg);
 }
