--- a/css/camp-za.css
+++ b/css/camp-za.css
@@ -2,16 +2,8 @@
     background-color: #069680;
 }
 
-.card {
-    transition: transform 1s;
-}
-
-.card:hover {
+.card .rotate {
     transform: rotateY(180deg);
-}
-
-.card:hover .card-back .back-image {
-    display: block;
 }
 
 .card-back {
@@ -26,5 +18,4 @@
     display: none;
     max-width: 100%;
     max-height: 100%;
-    transform: rotateY(180deg);
 }
